--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
   <link href="assets/jstree/theme/style.min.css" rel="stylesheet" />
   <link href="assets/plugins/lightbox/lightbox.css" rel="stylesheet" />
   <link href="https://cdn.datatables.net/fixedcolumns/5.0.0/css/fixedColumns.dataTables.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
@@ -99,6 +100,7 @@
   <script src="assets/plugins/bs-stepper/js/bs-stepper.min.js"></script>
   <script src="assets/plugins/bs-stepper/js/index.js"></script>
   <script src="assets/jstree/js/jstree.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
   <!--   
     <script src="assets/js/index.js"></script>
     <script src="assets/js/index2.js"></script>
